fix: Restore light mode and broken css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,19 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  color-scheme: light;
 }
 
+html,
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color-scheme: light;
+}
+
+color: var(--foreground);
+background: var(--background);
+font-family: Arial,
+Helvetica,
+sans-serif;
 }
 
 /* Force logo blending */
